# SimpleRayTracer

./: .gitignore  CMakeLists.txt  README.md
res/Shaders/: basic.shader  compute.shader  funny.shader  mycompute.glsl  mycompute.shader  shader.fs  shader.vs  text.shader
src/: CameraMoves.h  main.cpp  renderer.h  shader.h  shader2.h
